# line-cerebras

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yaml  publish-to-pypi.yaml  version-check.yaml
example_integrations/: README.md
example_integrations/cerebras/: README.md  config.py  cs_utils.py  interviewer.py  judges.py  main.py  pyproject.toml  report_logger.py
examples/basic_chat/: README.md
examples/counter/: README.md
examples/echo/: README.md
examples/form-filling/: README.md  config.py
examples/outbound_call_info/: config.py
examples/personal_banking_handoffs/: config.py
examples/sales_with_leads/: README.md  config.py
examples/text_to_agent/basic_chat/gemini/: README.md  config.py
examples/text_to_agent/basic_chat/gemini_live/: README.md  config.py
examples/text_to_agent/basic_chat/openai/: README.md  config.py
examples/text_to_agent/basic_chat/openai_realtime/: README.md  config.py
examples/text_to_agent/web_search/gemini_background/: README.md  config.py
examples/text_to_agent/web_search/gemini_live/: README.md  config.py
scripts/: check_version_bump.py
tests/: helpers.py
