[project]
name = "cerebras-interviewer"
version = "0.1.0"
description = "An interviewer agent using Cerebras API"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line",
    "cerebras.cloud.sdk",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "aiohttp>=3.12.0",
    "uvicorn==0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
